--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
   border: 2px solid black;
   padding: 5px 10px;
   border-radius: 10px;
-  margin-bottom: 10px; /* Memberikan jarak antara input field */
+  margin-bottom: 10px;
 }
 
 .form-address {
@@ -43,21 +43,19 @@ body {
 
 .button-submit {
   display: inline-flex;
-  padding: 4px 8px;
+  padding: 10px 20px;
   font-weight: 500;
   font-size: 1rem;
-  border-radius: 8px;
+  border-radius: 5px;
   justify-content: center;
-  background-color: #4caf50; /* Warna latar belakang tombol submit */
-  color: white; /* Warna teks tombol submit */
-  border: none; /* Menghilangkan border pada tombol submit */
-  cursor: pointer; /* Mengubah cursor menjadi pointer saat di-hover */
-  padding: 10px 20px; /* Padding di dalam tombol submit */
-  border-radius: 5px; /* Membuat sudut tombol submit menjadi bulat */
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .button-submit:hover {
-  background-color: #45a049; /* Mengubah warna latar belakang tombol submit saat di-hover */
+  background-color: #45a049;
 }
 
 .navbar_container {
@@ -87,7 +85,6 @@ body {
   flex-direction: column;
   row-gap: 1rem;
   grid-column: span 1;
-  background-color: antiquewhite;
 }
 
 .sidebar_button {
@@ -132,55 +129,45 @@ td {
   padding: 8px;
 }
 
-th {
-}
-
 button {
-  margin-right: 10px; /* Menambahkan spasi antar tombol */
+  margin-right: 10px;
 }
 
-/* Menambahkan border untuk memperjelas cell */
 td,
 th {
   border: 1px solid #ddd;
 }
 
 .modal {
-  position: fixed; /* Posisi modal secara fixed di seluruh layar */
-  z-index: 1; /* Pastikan modal berada di atas semua elemen lain */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Lebar modal mengisi seluruh layar */
-  height: 100%; /* Tinggi modal mengisi seluruh layar */
-  overflow: auto; /* Memungkinkan scroll jika konten modal lebih panjang dari layar */
-  background-color: rgb(0, 0, 0); /* Warna latar belakang modal */
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.4
-  ); /* Warna latar belakang modal dengan sedikit transparansi */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe; /* Warna latar belakang konten modal */
-  margin: 15% auto; /* Margin atas dan bawah 15%, dan secara otomatis di tengah secara horizontal */
-  padding: 20px; /* Padding di dalam konten modal */
-  border: 1px solid #888; /* Border sekeliling konten modal */
-  width: 80%; /* Lebar konten modal */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Shadow efek untuk modal */
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .close-button {
-  color: #aaa; /* Warna tombol close */
-  float: right; /* Posisi tombol close di kanan atas */
-  font-size: 28px; /* Ukuran font tombol close */
-  font-weight: bold; /* Ketebalan font tombol close */
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .close-button:hover,
-.close-button:focus {
-  color: black; /* Warna tombol close saat di-hover atau difokus */
-  text-decoration: none; /* Menghilangkan dekorasi teks pada tombol close */
-  cursor: pointer; /* Mengubah cursor menjadi pointer saat di-hover */
+close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
